Change obsolete domain referrence from "matlipe.com" to "onpointplugins .com"

--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,8 @@
     },
     {
       "name": "Mat Lipe",
-      "email": "mat@matlipe.com",
-      "homepage": "https://matlipe.com",
+      "email": "mat@onpointplugins.com",
+      "homepage": "https://onpointplugins.com",
       "role": "Developer"
     }
   ],
