Add 'replace' to composer to replace any use of cmb2/cmb2
Allow composer to automatically map to lipemat/cmb2 vs cmb2/cmb2
when either is declared as any dependency.

--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,9 @@
       "role": "Developer"
     }
   ],
+  "replace": {
+    "cmb2/cmb2" : "*"
+  },
   "suggest": {
     "composer/installers": "~1.0"
   },
