--- a/.gitattributes
+++ b/.gitattributes
@@ -6,12 +6,14 @@
 .github            export-ignore
 .gitignore         export-ignore
 .gitattributes     export-ignore
+.phpcs.xml.dist    export-ignore
 .sass-cache        export-ignore
 .travis.yml        export-ignore
 apigen             export-ignore
 Gruntfile.js       export-ignore
 node_modules       export-ignore
 package.json       export-ignore
+package-lock.json  export-ignore
 phpunit.xml        export-ignore
 tests              export-ignore
 composer.lock      export-ignore
@@ -27,3 +29,6 @@ Dockunit.json      export-ignore
 phpunit.xml.dist   export-ignore
 NOTES.md           export-ignore
 cypress.json       export-ignore
+yarn.lock		  export-ignore
+CODE_OF_CONDUCT.md export-ignore
+CONTRIBUTING.md    export-ignore
